@@ -6,12 +6,14 @@
 #define ASP_DEBUG_H
 
 #include "asp-priv.h"
+#include <stdint.h>
 #include <stdio.h>
 
 #ifdef __cplusplus
 extern "C" {
 #endif
 
+uint32_t AspUseCount(const AspDataEntry *);
 void AspTraceFile(AspEngine *, FILE *);
 void AspDump(const AspEngine *, FILE *);
 
